<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E1E1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="#E6E5E5"
        android:ellipsize="start"
        android:gravity="start"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="#E6E5E5"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#D50000"
                android:gravity="center"
                android:text="@string/ce"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvOpenBracket"
                style="@style/ActionButton"
                android:text="@string/open" />

            <TextView
                android:id="@+id/tvCloseBracket"
                style="@style/ActionButton"
                android:text="@string/close" />

            <TextView
                android:id="@+id/tvDivide"
                style="@style/ActionButton"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeven"
                style="@style/DigitButton"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/tvEight"
                style="@style/DigitButton"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/tvNine"
                style="@style/DigitButton"
                android:text="@string/_9" />

            <TextView
                android:id="@+id/tvMultiply"
                style="@style/ActionButton"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFour"
                style="@style/DigitButton"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/tvFive"
                style="@style/DigitButton"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/tvSix"
                style="@style/DigitButton"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/tvMinus"
                style="@style/ActionButton"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                style="@style/DigitButton"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/tvTwo"
                style="@style/DigitButton"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/tvThree"
                style="@style/DigitButton"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/tvPlus"
                style="@style/ActionButton"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDot"
                style="@style/DigitButton"
                android:text="@string/dot" />

            <TextView
                android:id="@+id/tvZero"
                style="@style/DigitButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/tvBack"
                style="@style/DigitButton"
                android:text="Back" />

            <TextView
                android:id="@+id/tvEquals"
                style="@style/ActionButton"
                android:text="@string/equals_to" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>